# ros2_camera_split

./: README.md
ros2_split_node/src/camera_split/: CMakeLists.txt  left.yaml  package.xml  right.yaml
ros2_split_node/src/camera_split/src/: camera_split.cpp
